# delete_old_tweets

./: .gitignore  cloudwatch_schedular.sh  handler.py  pyproject.toml  readme.md  serverless.yml  targets.json
functions/: aws_utils.py  remove_prefix.py
